raffia/tests/error/scss/at-rule/use/with-empty.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but `)` received
  ┌─ with-empty.scss:1:20
  │
1 │ @use "other" with ();
  │                    ^


